# ruft

./: Cargo.toml
ruft_core/: Cargo.toml
ruft_core/src/: lib.rs  model.rs  server.rs
ruft_demo/: Cargo.toml  build.rs
ruft_demo/assets/: cluster.yaml
ruft_demo/proto/: ruft.proto
ruft_demo/src/: config.rs  main.rs  memory_blob_storage.rs  node_service.rs  ruft_proto.rs
