[package]
name = "ruft_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = { version = "0.9.10" }
ruft_core = { path = "../ruft_core" }
